# take_that_hill

./: CMakeLists.txt  flake.nix  readme.md  readme1.md  readme2.md  readme3.md  state.txt
lib/: game.h  utils.h
src/: game.cpp  main.cpp  utils.cpp
